# pattern-searching

./: CMakeLists.txt  README.md  pan-tadeusz.txt  str.txt
PatternSearchingApp/: PatternSearchingApp.cpp
PatternSearchingLib/: PatternSearchingLib.cpp  PatternSearchingLib.h
PatternSearchingUnitTest/: PatternSearchingUnitTest.cpp
